...
            "state" : "translated",
            "value" : "アルバムアーティスト"
          }
        }
      }
    },
    "Albums" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "アルバム"
          }
...
            "state" : "translated",
            "value" : "すべて（AND）"
          }
        }
      }
    },
    "All Songs" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "すべての曲"
          }
...
            "state" : "translated",
            "value" : "レベルメーター"
          }
        }
      }
    },
    "Library" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "ライブラリ"
          }
...
            "state" : "translated",
            "value" : "プレイリストが空です"
          }
        }
      }
    },
    "Playlists" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "プレイリスト"
          }
...
            "state" : "translated",
            "value" : "保存中…"
          }
        }
      }
    },
    "Search" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "検索"
          }
...
            "state" : "translated",
            "value" : "時間表示"
          }
        }
      }
    },
    "Title" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "タイトル"
          }
...
